--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #efefef;
+  color: #333;
 }
 .container {
   max-width: 768px;
@@ -24,5 +25,12 @@ body {
   h1 {
     font-size: 20px;
     line-height: 26px;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #333;
+    color: #efefef;
   }
 }
